Integrate all navitia endpoint and objects